--- a/Liebre/Liebre.vcxproj.filters
+++ b/Liebre/Liebre.vcxproj.filters
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Game.cpp" />
     <ClCompile Include="InputManager.cpp" />
-    <ClCompile Include="Liebre.cpp" />
-    <ClCompile Include="Nodo.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Texto.cpp" />
+    <ClCompile Include="Singleton.cpp" />
+    <ClCompile Include="Ladron.cpp" />
+    <ClCompile Include="vertice.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Game.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Liebre.h" />
-    <ClInclude Include="Nodo.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Texto.h" />
+    <ClInclude Include="Singleton.h" />
+    <ClInclude Include="vertice.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
