--- a/Liebre/Liebre.vcxproj
+++ b/Liebre/Liebre.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Liebre</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <ProjectName>Ladron</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -169,7 +170,7 @@
   <ItemGroup>
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="InputManager.h" />
-    <ClInclude Include="Liebre.h" />
+    <ClInclude Include="Ladron.h" />
     <ClInclude Include="vertice.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Texto.h" />
